--- a/jun_springboot_admin/src/main/resources/templates/main.html
+++ b/jun_springboot_admin/src/main/resources/templates/main.html
@@ -100,12 +100,7 @@
         <div class="layui-row layui-col-space10">
             <div class="layui-col-md12">
                 <blockquote class="layui-elem-quote main_btn">
-                    <p>喜欢此后台模板的可以给我的Gitee加个Star支持一下</p>
-                    <p>Gitee地址：<a target="_blank" href='https://gitee.com/zwens/springboot-admin'><img src='https://gitee.com/zwens/springboot-admin/badge/star.svg?theme=dark' alt='star'></img></a></p>
-                    <p style="float:left;">GitHub地址：
-                        <div style="float:left;">
-                   <iframe src="https://ghbtns.com/github-btn.html?user=aitangbao&repo=springboot-admin&type=star&count=true" frameborder="0" scrolling="0" width="100px" height="20px"></iframe>
-                        </div>
+                    <p style="float:left;"> 
                     </p>
                 </blockquote>
             </div>
@@ -130,22 +125,22 @@
                     </thead>
                     <tbody>
                     <tr>
-                        <td>wenbin</td>
+                        <td>wujun</td>
                         <td>2020-03-18</td>
                         <td>人生就像是一场修行</td>
                     </tr>
                     <tr>
-                        <td>wenbin</td>
+                        <td>wujun</td>
                         <td>2020-03-18</td>
                         <td>于千万人之中遇见你所遇见的人，于千万年之中，时间的无涯的荒野里…</td>
                     </tr>
                     <tr>
-                        <td>wenbin</td>
+                        <td>wujun</td>
                         <td>2020-03-18</td>
                         <td>于千万人之中遇见你所遇见的人，于千万年之中，时间的无涯的荒野里…</td>
                     </tr>
                     <tr>
-                        <td>wenbin</td>
+                        <td>wujun</td>
                         <td>2020-03-18</td>
                         <td>于千万人之中遇见你所遇见的人，于千万年之中，时间的无涯的荒野里…</td>
                     </tr>
