--- a/jun_springboot_admin/src/main/resources/templates/login.html
+++ b/jun_springboot_admin/src/main/resources/templates/login.html
@@ -87,7 +87,7 @@
                             value: res.data.accessToken
                         })
                         layer.msg('登录成功', {time: 1000}, function () {
-                            window.location = '/index/home';
+                            window.location = '/home.html';
                         });
                     } else {
                         layer.msg(res.msg);
