--- a/jun_springboot_admin/src/main/resources/templates/sysjob/list.html
+++ b/jun_springboot_admin/src/main/resources/templates/sysjob/list.html
@@ -231,7 +231,7 @@
                     break;
                 case 'jobLog':
                     window.parent.active.tabDelete(tabId);
-                    window.parent.active.tabAdd("/index/sysJobLog", tabId, "定时任务日志")
+                    window.parent.active.tabAdd("/sysJobLog/list.html", tabId, "定时任务日志")
                     window.parent.active.tabChange(tabId);
                     break;
             }
