--- a/jun_springboot_admin/src/main/resources/template/menu.sql.vm
+++ b/jun_springboot_admin/src/main/resources/template/menu.sql.vm
@@ -1,6 +1,6 @@
 -- 默认上级目录菜单为其他
 INSERT INTO sys_permission (id, name, pid, url,target, type,order_num, deleted, status,create_time,update_time)
-    VALUES ('${identity}', '${comments}' ,'21', '/index/${classname}','_self', '2', '10',1, 1,now(),now());
+    VALUES ('${identity}', '${comments}' ,'21', '/${classname}/list.html','_self', '2', '10',1, 1,now(),now());
 -- 菜单对应按钮SQL
 INSERT INTO sys_permission (id,pid, name, url, perms, type, deleted, status,create_time,update_time)
     VALUES ('${selectId}', '${identity}', '列表' , '${classname}/listByPage','${classname}:list', '3',1, 1,now(),now());
