--- a/jun_springboot_admin/src/main/resources/templates/login.html
+++ b/jun_springboot_admin/src/main/resources/templates/login.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>齐兴会计师事务所项目管理系统-登陆</title>
+    <title>齐兴会计师事务所信息系统-登陆</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta http-equiv="Access-Control-Allow-Origin" content="*">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -24,7 +24,7 @@
 			    top: 30%;
 			    margin-left: -150px;
 			    margin-top: -100px;">
-            <span style="font-size:48px">齐兴会计师事务所项目管理系统</span>
+            <span style="font-size:48px">齐兴会计师事务所信息系统</span>
         </div>
 <div id="container">
     <div class="admin-login-background">
