--- a/jun_springboot_admin/src/main/resources/templates/syscontent/list_backup.html
+++ b/jun_springboot_admin/src/main/resources/templates/syscontent/list_backup.html
@@ -96,7 +96,7 @@
         //图片
         layedit.set({
             uploadImage: {
-                url: '/sysFiles/upload?authorization=' + tokenQuery +"&bizid=0&biztype=content"//接口url
+                url: '/sysFiles/upload?authorization=' + tokenQuery //接口url
                 , type: 'post' //默认post
             }
         });
