--- a/jun_springboot_admin/src/main/resources/templates/users/update_password.html
+++ b/jun_springboot_admin/src/main/resources/templates/users/update_password.html
@@ -54,7 +54,7 @@
     form.on('submit(baseSubmit)', function (data) {
         CoreUtil.sendPut("/sys/user/pwd", data.field, function (res) {
             layer.msg("密码已经变更请重新登录", {time: 2000}, function () {
-                top.window.location.href = "/index/login";
+                top.window.location.href = "/login.html";
             });
         });
 
